# apexquant

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY_AUDIT_v2.md  _atr_grid.py  _diagnose_cnn.py  _diagnose_sharpe.py  _diagnose_signals.py  _inspect_preds.py  _run_ablation.py  _run_backtest.py  _run_comparison.py  _run_signal_exit_test.py  environment.yml  pyproject.toml  requirements.txt  run_all.py
.streamlit/: config.toml
analytics/: __init__.py  attribution.py  health.py  verdict.py
backtest/: __init__.py  _legacy.py  bt_feeds.py  bt_runner.py  bt_strategy.py  engine.py  inference.py  metrics.py  reporter.py  runner.py
compute/: __init__.py  aws_backend.py  base.py  colab_backend.py  gcloud_backend.py  local_backend.py
config/: __init__.py  default.py  loader.py  pipeline.json  preset_io.py  presets.py  schema.py
data/: __init__.py  bar.py  cleaner.py  context.py  feature_engine.py  loader.py  meta_features.py  vol_features.py
diagnostics/: __init__.py  engine_hooks.py  equity_scan.py  feature_drift.py  pnl_autocorrelation.py  trade_clustering.py  trade_quality.py
examples/sample_checkpoints/: README.md
examples/sample_data/: AAPL_15min.csv  AAPL_1hour.csv  README.md  SPY_15min.csv  SPY_1hour.csv
frontend/: app.py
frontend/components/: analytics_ui.py  config_tabs.py  diagnostics_panel.py  health_bar.py  preset_library.py  styles.py
frontend/pages/: 1_Dashboard.py  (+5 more)
llm/: __init__.py  base.py  result_analyzer.py  sentiment_predictor.py  strategy_generator.py
pipeline/: __init__.py  executor.py  schema.py  validator.py
predictors/: __init__.py  aggregator.py  base.py  calibrator.py  factor_layer.py  p01_volatility.py  p02_turning_point.py  p03_meta_label.py  p04_meta_label.py  registry.py  result.py  signals.py
services/: __init__.py  drive_sync.py
strategies/: __init__.py  base.py  mean_reversion.py  momentum.py
tests/: test_adapters.py  test_analytics.py  test_config_tier.py  test_demo_e2e.py  test_diagnostics.py  test_health.py  test_preflight.py
(+20 files in other folders)
